reproduce layout issue

--- a/demo/style.css
+++ b/demo/style.css
@@ -9,8 +9,10 @@ h1 {
 }
 
 #terminal-container {
-    width: 800px;
-    height: 450px;
+    width: 0;
+    height: 0;
+    /* width: 800px;
+    height: 450px; */
     margin: 0 auto;
     padding: 2px;
 }
